Updated rename of 'amount_amino_acid' to 'amino_acid_ml'.

--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -13,8 +13,8 @@
 = bt.label :glucose_ml_percent_3_86, "Volume of 3.86% glucose/liter (ml)"
 = bt.text_field :glucose_ml_percent_3_86
 
-= bt.label :amount_amino_acid, "Volume of amino acid soln/liter (ml)"
-= bt.text_field :amount_amino_acid
+= bt.label :amino_acid_ml, "Volume of amino acid soln/liter (ml)"
+= bt.text_field :amino_acid_ml
 
 = bt.label :amount_icodextrin_acid, "Volume of icodextrin soln (ml)"
 = bt.text_field :amount_icodextrin_acid
