--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -42,7 +42,7 @@
           %td{ :data => { :heading => "3.86% glucose/liter (ml)" } }
             = bt.glucose_ml_percent_3_86
           %td{ :data => { :heading => "amino acid soln/liter (ml)" } }
-            = bt.amount_amino_acid
+            = bt.amino_acid_ml
           %td{ :data => { :heading => "icodextrin soln (ml)" } }
             = bt.amount_icodextrin_acid
           %td{ :data => { :heading => "Low glucose degradation product (GDP)" } }
