--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -16,8 +16,8 @@
 = bt.label :amino_acid_ml, "Volume of amino acid soln/liter (ml)"
 = bt.text_field :amino_acid_ml
 
-= bt.label :amount_icodextrin_acid, "Volume of icodextrin soln (ml)"
-= bt.text_field :amount_icodextrin_acid
+= bt.label :icodextrin_acid_ml, "Volume of icodextrin soln (ml)"
+= bt.text_field :icodextrin_acid_ml
 
 %ul.no-bullet
   %li
