--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -44,7 +44,7 @@
           %td{ :data => { :heading => "amino acid soln/liter (ml)" } }
             = bt.amino_acid_ml
           %td{ :data => { :heading => "icodextrin soln (ml)" } }
-            = bt.amount_icodextrin_acid
+            = bt.icodextrin_acid_ml
           %td{ :data => { :heading => "Low glucose degradation product (GDP)" } }
             = yes_no(bt.uses_low_gdp)
           %td{ :data => { :heading => "Low sodium solution" } }
