Updated rename of 'uses_low_gdp' to 'low_glucose_degradation'.

--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -21,8 +21,8 @@
 
 %ul.no-bullet
   %li
-    = bt.check_box :uses_low_gdp
-    = bt.label :uses_low_gdp, "Low glucose degradation product (GDP)"
+    = bt.check_box :low_glucose_degradation
+    = bt.label :low_glucose_degradation, "Low glucose degradation product (GDP)"
   %li
     = bt.check_box :uses_low_sodium
     = bt.label :uses_low_sodium, "Low sodium solution"
