--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -46,7 +46,7 @@
           %td{ :data => { :heading => "icodextrin soln (ml)" } }
             = bt.icodextrin_acid_ml
           %td{ :data => { :heading => "Low glucose degradation product (GDP)" } }
-            = yes_no(bt.uses_low_gdp)
+            = yes_no(bt.low_glucose_degradation)
           %td{ :data => { :heading => "Low sodium solution" } }
             = yes_no(bt.uses_low_sodium)
           %td{ :data => { :heading => "Action" } }
