Updated rename of 'uses_low_sodium' to 'low_sodium'.

--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -24,6 +24,6 @@
     = bt.check_box :low_glucose_degradation
     = bt.label :low_glucose_degradation, "Low glucose degradation product (GDP)"
   %li
-    = bt.check_box :uses_low_sodium
-    = bt.label :uses_low_sodium, "Low sodium solution"
+    = bt.check_box :low_sodium
+    = bt.label :low_sodium, "Low sodium solution"
 
