--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -48,6 +48,6 @@
           %td{ :data => { :heading => "Low glucose degradation product (GDP)" } }
             = yes_no(bt.low_glucose_degradation)
           %td{ :data => { :heading => "Low sodium solution" } }
-            = yes_no(bt.uses_low_sodium)
+            = yes_no(bt.low_sodium)
           %td{ :data => { :heading => "Action" } }
 
