--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -16,7 +16,7 @@
 = bt.label :amino_acid_ml, "Volume of amino acid soln/liter (ml)"
 = bt.text_field :amino_acid_ml
 
-= bt.label :icodextrin_acid_ml, "Volume of icodextrin soln (ml)"
+= bt.label :icodextrin_acid_ml, "Volume of icodextrin acid soln (ml)"
 = bt.text_field :icodextrin_acid_ml
 
 %ul.no-bullet
