--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -12,6 +12,11 @@
             - @user.errors.full_messages.each do |msg|
               %li= msg
 
+    - if @user.expired?
+      .row
+        = check_box_tag 'user[unexpire]', true, false, class: 'inline'
+        = label_tag :user_unexpire, 'Reactivate account'
+
     .row
       - Role.all.each_with_index do |role, index|
         - element_id = "user_role_ids_#{index}"
