Update navigations with new user index paths

--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -2,11 +2,11 @@
   %h3 Manage users
 
 .row
-  = link_to 'All users', action: 'index'
+  = link_to 'All', action: 'index'
   |
-  = link_to 'Awaiting approval', action: 'unapproved'
+  = link_to 'Unapproved', action: 'unapproved'
   |
-  = link_to 'Inactive users', action: 'expired'
+  = link_to 'Inactive', action: 'expired'
 
 .row
   %table
