Added feature for editing/updating a bag type.

--- a/app/views/navigation/_renalware_admin.html.haml
+++ b/app/views/navigation/_renalware_admin.html.haml
@@ -9,5 +9,5 @@
       %li
         = link_to "Manage Modalities", modality_codes_path
       %li
-        = link_to "Add a new bag type", new_bag_type_path
+        = link_to "Manage bag types", bag_types_path
 
