--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -27,6 +27,8 @@
         Low glucose degradation product (GDP)
       %th
         Low sodium solution
+      %th
+        Action
 
     - @bag_types.each do |bt|
       %tbody
@@ -50,4 +52,6 @@
           %td{ :data => { :heading => "Low sodium solution" } }
             = yes_no(bt.low_sodium)
           %td{ :data => { :heading => "Action" } }
-
+            %ul.table-data-list
+              %li
+                = link_to "Edit", edit_bag_type_path(bt.id)
