--- a/app/views/navigation/_renalware_admin.html.haml
+++ b/app/views/navigation/_renalware_admin.html.haml
@@ -9,5 +9,5 @@
       %li
         = link_to "Manage Modalities", modality_codes_path
       %li
-        = link_to "Manage bag types", bag_types_path
+        = link_to "Manage Bag Types", bag_types_path
 
