Edited column text for bag types index.

--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -12,17 +12,17 @@
       %th
         Manufacturer
       %th
-        Bag description
+        Description (nickname)
       %th
-        Volume of 1.36% glucose/liter (ml)
+        Vol of 1.36% glucose/liter (ml)
       %th
-        Volume of 2.27% glucose/liter (ml)
+        Vol of 2.27% glucose/liter (ml)
       %th
-        Volume of 3.86% glucose/liter (ml)
+        Vol of 3.86% glucose/liter (ml)
       %th
-        Volume of amino acid soln/liter (ml)
+        Vol of amino acid soln/liter (ml)
       %th
-        Volume of icodextrin soln (ml)
+        Vol of icodextrin acid soln/liter (ml)
       %th
         Low glucose degradation product (GDP)
       %th
