Made correction to typo in bag type form and index.

--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -14,15 +14,15 @@
       %th
         Description (nickname)
       %th
-        Vol of 1.36% glucose/liter (ml)
+        Vol of 1.36% glucose/litre (ml)
       %th
-        Vol of 2.27% glucose/liter (ml)
+        Vol of 2.27% glucose/litre (ml)
       %th
-        Vol of 3.86% glucose/liter (ml)
+        Vol of 3.86% glucose/litre (ml)
       %th
-        Vol of amino acid soln/liter (ml)
+        Vol of amino acid soln/litre (ml)
       %th
-        Vol of icodextrin acid soln/liter (ml)
+        Vol of icodextrin acid soln/litre (ml)
       %th
         Low glucose degradation product (GDP)
       %th
