--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -4,19 +4,19 @@
 = bt.label :description
 = bt.text_field :description
 
-= bt.label :glucose_ml_percent_1_36, "Volume of 1.36% glucose/liter (ml)"
+= bt.label :glucose_ml_percent_1_36, "Volume of 1.36% glucose/litre (ml)"
 = bt.text_field :glucose_ml_percent_1_36
 
-= bt.label :glucose_ml_percent_2_27, "Volume of 2.27% glucose/liter (ml)"
+= bt.label :glucose_ml_percent_2_27, "Volume of 2.27% glucose/litre (ml)"
 = bt.text_field :glucose_ml_percent_2_27
 
-= bt.label :glucose_ml_percent_3_86, "Volume of 3.86% glucose/liter (ml)"
+= bt.label :glucose_ml_percent_3_86, "Volume of 3.86% glucose/litre (ml)"
 = bt.text_field :glucose_ml_percent_3_86
 
-= bt.label :amino_acid_ml, "Volume of amino acid soln/liter (ml)"
+= bt.label :amino_acid_ml, "Volume of amino acid soln/litre (ml)"
 = bt.text_field :amino_acid_ml
 
-= bt.label :icodextrin_acid_ml, "Volume of icodextrin acid soln (ml)"
+= bt.label :icodextrin_acid_ml, "Volume of icodextrin acid soln/litre (ml)"
 = bt.text_field :icodextrin_acid_ml
 
 %ul.no-bullet
