Updated files with renamed 'bag_types' attribute 'icodextrin_ml'.

--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -16,8 +16,8 @@
 = bt.label :amino_acid_ml, "Volume of amino acid soln/litre (ml)"
 = bt.text_field :amino_acid_ml
 
-= bt.label :icodextrin_acid_ml, "Volume of icodextrin acid soln/litre (ml)"
-= bt.text_field :icodextrin_acid_ml
+= bt.label :icodextrin_ml, "Volume of icodextrin acid soln/litre (ml)"
+= bt.text_field :icodextrin_ml
 
 %ul.no-bullet
   %li
