--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -46,7 +46,7 @@
           %td{ :data => { :heading => "amino acid soln/liter (ml)" } }
             = bt.amino_acid_ml
           %td{ :data => { :heading => "icodextrin soln (ml)" } }
-            = bt.icodextrin_acid_ml
+            = bt.icodextrin_ml
           %td{ :data => { :heading => "Low glucose degradation product (GDP)" } }
             = yes_no(bt.low_glucose_degradation)
           %td{ :data => { :heading => "Low sodium solution" } }
