Populate and display snomed and manual descriptions

--- a/app/views/patients/_problems.html.haml
+++ b/app/views/patients/_problems.html.haml
@@ -8,7 +8,7 @@
   - @patient.problems.each do |p|
     %tr{:class => "problem"}
       %td{:data => { :heading => "Problem" }}
-        = p.description
+        = p.full_description
       %td{:data => { :heading => "Date" }}
         = p.created_at
       %td{:data => { :heading => "Date" }}
