--- a/app/views/problems/_show.html.haml
+++ b/app/views/problems/_show.html.haml
@@ -1,4 +1,4 @@
 %dl.accordion{data: {accordion: true} }
   %dd.accordion-navigation.med-form
     %span{ class: 'problem' }
-      = "#{pb.object.description}, #{pb.object.created_at.strftime("%d/%m/%Y")}"
+      = "#{pb.object.full_description}, #{pb.object.created_at.strftime("%d/%m/%Y")}"
