--- a/app/views/problems/_form.html.haml
+++ b/app/views/problems/_form.html.haml
@@ -11,10 +11,11 @@
       = label_tag :snomed_term
       = select_tag :snomed_term
 
-      = pb.hidden_field :snomed_id, :class => "selected-snomed-id"
+      = pb.hidden_field :snomed_id, class: 'selected-snomed-id'
+      = pb.hidden_field :snomed_description, class: 'selected-snomed-description'
 
       = pb.label :description
-      = pb.text_field :description, :class => "probs-description"
+      = pb.text_field :description, class: "probs-description"
 
 - else
 
