Edited display for Date/Time column for patient events.

--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -11,6 +11,5 @@
         .content.toggle-content{:id => "patient-event-notes-#{event.id}"}
           = event.notes
   %td{:data => { :heading => "Time"}}
-    = event.date_time.strftime("%d/%m/%Y")
-  %td{:data => { :heading => "Time"}}
-    = event.date_time.strftime("%H:%M")
+    = event.date_time
+
