--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -26,7 +26,7 @@
       %th
         Low Na
       %th
-        Options
+        Action
 
     - @bag_types.each do |bt|
       %tbody
@@ -41,14 +41,14 @@
             = bt.glucose_ml_percent_2_27
           %td{ :data => { :heading => "3.86% glucose/litre (ml)" } }
             = bt.glucose_ml_percent_3_86
-          %td{ :data => { :heading => "amino acid soln (ml)" } }
+          %td{ :data => { :heading => "Amino acid soln (ml)" } }
             = bt.amino_acid_ml
-          %td{ :data => { :heading => "icodextrin soln (ml)" } }
+          %td{ :data => { :heading => "Icodextrin soln (ml)" } }
             = bt.icodextrin_ml
           %td{ :data => { :heading => "Low GDP" } }
             = yes_no(bt.low_glucose_degradation)
           %td{ :data => { :heading => "Low Na" } }
             = yes_no(bt.low_sodium)
-          %td{ :data => { :heading => "Options" } }
+          %td{ :data => { :heading => "Actions" } }
             = link_to "Edit", edit_bag_type_path(bt.id), id: "edit-bag-type-#{bt.id}"
             = link_to "Delete", bag_type_path(bt.id), method: :delete , class: "delete", id: "delete-bag-type-#{bt.id}", data: { confirm: "Are you sure you want to delete this bag type?" }
