--- a/app/views/pd_regimes/_pd_regime_bags.html.haml
+++ b/app/views/pd_regimes/_pd_regime_bags.html.haml
@@ -1,4 +1,4 @@
-%h5.section-underliner Bags
+%h5.section-underliner Bags:
 
 = r.fields_for :pd_regime_bags do |rb|
   .large-4.columns.inline
@@ -31,6 +31,5 @@
 
   %hr
 
-.large-12.columns.section-underliner
   = r.submit 'Add Bag', class: 'button save tiny'
 
