Change "Code Ref" menu item to generic "Help"
we shall have non code ref items here in the future

--- a/app/views/navigation/_renal_reg_codes_admin.html.haml
+++ b/app/views/navigation/_renal_reg_codes_admin.html.haml
@@ -1,6 +1,6 @@
 %ul.right.large-2.columns
   %li.has-dropdown
-    = link_to "Code Ref", "#"
+    = link_to "Help", "#"
     %ul.dropdown
       %li
-        = link_to "Renal Registry Reason for Change Codes", modality_reasons_path
+        = link_to "Renal Reg HD/PD Reasons for Change", modality_reasons_path
