Change All Patients to Patients List

--- a/app/views/navigation/_patients_admin.html.haml
+++ b/app/views/navigation/_patients_admin.html.haml
@@ -3,7 +3,7 @@
     = link_to "Patients", patients_path
     %ul.dropdown
       %li
-        = link_to "All Patients", patients_path
+        = link_to "Patients List", patients_path
       %li
         = link_to "Add a New Patient", new_patient_path
       %li
