--- a/app/views/navigation/_main.html.haml
+++ b/app/views/navigation/_main.html.haml
@@ -9,8 +9,6 @@
       = render partial: 'navigation/patient_admin'
       = render partial: 'navigation/patient_search'
       = render partial: 'navigation/sign_out'
-      = render partial: 'navigation/users_admin'
-      = render partial: 'navigation/renal_reg_codes_admin'
+      = render partial: 'navigation/help_items'
       = render partial: 'navigation/patients_admin'
       = render partial: 'navigation/renalware_admin'
-
