Make home main nav link more compact

--- a/app/views/navigation/_main.html.haml
+++ b/app/views/navigation/_main.html.haml
@@ -2,7 +2,7 @@
   %ul.title-area
     %li.name.has-dropdown.active
       %h1
-        = link_to "Renalwarev2", patients_path, :title => "Home"
+        = link_to "RW2.0", patients_path, :title => "Home"
 
   - if user_signed_in?
     %section.top-bar-section
