--- a/app/views/modality_codes/index.html.haml
+++ b/app/views/modality_codes/index.html.haml
@@ -5,29 +5,30 @@
   = link_to "Add A New Modality", new_modality_code_path, :class => "button tiny"
 
 .row
-  %table.responsive
+  %table.responsive.modality-codes
     %caption.title
       Modalities
     %thead
-      %th
-        Modal Name 
-      %th  
-        Modal Code
-      %th 
-        Modal Site
-      %th 
-        Action 
-      
-    - @modal_codes.each do |m|
-      %tbody
+      %tr
+        %th
+          Modal Name
+        %th
+          Modal Code
+        %th
+          Modal Site
+        %th
+          Action
+
+    %tbody
+      - @modal_codes.each do |m|
         %tr
-          %td{:data => { :heading => "Modal Name" }}      
+          %td{ :data => { :heading => "Modal Name" } }
             = m.name
-          %td{:data => { :heading => "Modal Code" }}   
+          %td{ :data => { :heading => "Modal Code" } }
             = m.code
-          %td{:data => { :heading => "Modal Site" }}    
+          %td{ :data => { :heading => "Modal Site" } }
             = m.site
-          %td{:data => { :heading => "Action" }} 
+          %td{ :data => { :heading => "Action" } }
             = link_to "Edit", edit_modality_code_path(m.id)
-            = link_to "Delete", modality_code_path(m.id), id: "#{m.id}-modal", method: :delete, :class => "delete", data: {confirm: "Are you sure you want to delete this modal?" }
+            = link_to "Delete", modality_code_path(m.id), method: :delete, class: "delete", data: { confirm: "Are you sure you want to delete this modal?" }
 
