Added feature for viewing a patient's single PD Regime.

--- a/app/views/patients/_pd_regimes_table.html.haml
+++ b/app/views/patients/_pd_regimes_table.html.haml
@@ -43,11 +43,8 @@
             - unless current_user.read_only?
               %li
                 = link_to "Update", edit_patient_pd_regime_path(@patient, r.id), class: "update-pd-regime"
-
-
-
-
-
+              %li
+                = link_to "View Regime", patient_pd_regime_path(@patient, r.id), class: "view-pd-regime"
 
 
 
