--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -5,31 +5,32 @@
   = link_to "Create a new Bag Type", new_bag_type_path, :class => "button tiny"
 
 .row
-  %table.responsive
+  %table.responsive.bag-types-list
     %thead
-      %th
-        Manufacturer
-      %th
-        Description
-      %th
-        1.36% glc/l (ml)
-      %th
-        2.27% glc/l (ml)
-      %th
-        3.86% glc/l (ml)
-      %th
-        amino acid (ml)
-      %th
-        icodextrin (ml)
-      %th
-        Low GDP
-      %th
-        Low Na
-      %th
-        Action
+      %tr
+        %th
+          Manufacturer
+        %th
+          Description
+        %th
+          1.36% glc/l (ml)
+        %th
+          2.27% glc/l (ml)
+        %th
+          3.86% glc/l (ml)
+        %th
+          amino acid (ml)
+        %th
+          icodextrin (ml)
+        %th
+          Low GDP
+        %th
+          Low Na
+        %th
+          Action
 
-    - @bag_types.each do |bt|
-      %tbody
+    %tbody
+      - @bag_types.each do |bt|
         %tr
           %td{ :data => { :heading => "Manufacturer" } }
             = bt.manufacturer
