Remove new letter link from patients index

--- a/app/views/patients/index.html.haml
+++ b/app/views/patients/index.html.haml
@@ -20,7 +20,7 @@
           Date of Birth
         %th
           Age
-        %th.g-center{colspan: "2"}
+        %th.g-center
           Actions
 
     %tbody
