--- a/app/views/patients/_mini_renal_profile.html.haml
+++ b/app/views/patients/_mini_renal_profile.html.haml
@@ -1,6 +1,8 @@
 .renal-profile
   = link_to "ESRF:", esrf_info_patient_path(@patient)
-  = "#{@patient.esrf_info.blank? || @patient.esrf_info.new_record? ? " " : @patient.esrf_info.date}"
+  = display_prd_date(@patient)
+  = display_prd(@patient)
+
   <br>
   - if display_pd_menu(@patient.modalities.with_deleted)
     = render partial: "patients/pd_menu", locals: { model: @patient }
