Added errors to peritonitis new/edit forms, fixed incorrect link for 'cancel' button.

--- a/app/views/peritonitis_episodes/new.html.haml
+++ b/app/views/peritonitis_episodes/new.html.haml
@@ -7,6 +7,9 @@
   %h4
     Record an Episode of Peritonitis
 
+  .large-12.columns
+    = render partial: "shared/errors", locals: { model: @peritonitis_episode }
+
 .row
   %ul.no-bullet
     = field_set_tag do
