--- a/app/views/peritonitis_episodes/edit.html.haml
+++ b/app/views/peritonitis_episodes/edit.html.haml
@@ -5,6 +5,9 @@
 
     %h5 Update a Peritonitis Episode
 
+    .row
+      = render partial: "shared/errors", locals: { model: @peritonitis_episode }
+
 .row
   .large-12.columns
     = form_for [@patient, @peritonitis_episode], :method => :put do |p|
@@ -16,4 +19,4 @@
         .row.button-padding
           = submit_tag "Update Peritonitis Episode", class: "button tiny right save"
 
-          = link_to "Cancel", patient_exit_site_infection_path(@patient, @peritonitis_episode.id), class: "button tiny left cancel"
+          = link_to "Cancel", patient_peritonitis_episode_path(@patient, @peritonitis_episode.id), class: "button tiny left cancel"
