Adjusted styling of columns for exit site table.

--- a/app/views/patients/_exit_site_table.html.haml
+++ b/app/views/patients/_exit_site_table.html.haml
@@ -1,6 +1,6 @@
 %table.responsive
   %thead
-    %th.column-6-width
+    %th.col-width-date
       Diagnosis Date
     %th
       Outcome
@@ -12,9 +12,9 @@
       Antibiotics/Routes
     %th
       Notes
-    %th.column-6-width
+    %th.col-width-date
       Last Updated
-    %th
+    %th.col-width-9
       Action
 
   %tbody
