Rename expired route to inactive

--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -6,7 +6,7 @@
   |
   = link_to 'Unapproved', action: 'unapproved'
   |
-  = link_to 'Inactive', action: 'expired'
+  = link_to 'Inactive', action: 'inactive'
 
 .row
   %table
