Use nested form helper when adding PD Bags
When JS is available the nested form helper is used to dynamically add
the relevant form fields for a new PdRegimeBag and similarly to remove a
bag.
Without JS the request cycle is used to add and remove bags.

--- a/app/views/pd_regimes/_pd_regime_bags.html.haml
+++ b/app/views/pd_regimes/_pd_regime_bags.html.haml
@@ -7,4 +7,5 @@
 
 .large-12.columns
   = r.submit 'Add Bag', name: 'actions[add]', class: 'add-bag button tiny'
+  = r.link_to_add 'Add Bag', :pd_regime_bags, class: 'add-bag button tiny hide'
 
