Add signature field to user profile form

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,6 +35,11 @@
       <%= f.text_field :professional_position %>
     </div>
 
+    <div class="field large-8 small-6">
+      <%= f.label :signature %><br />
+      <%= f.text_area :signature %>
+    </div>
+
     <div class="actions">
       <%= f.submit "Update", class: 'button save' %>
     </div>
