--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,7 +36,7 @@
     </div>
 
     <div class="field large-8 small-6">
-      <%= f.label :signature %><br />
+      <%= f.label :signature %> <i>(appears in letters, e.g. "Dr Jane Smith, MRCP")</i><br />
       <%= f.text_area :signature %>
     </div>
 
