--- a/app/views/medications/_new.html.haml
+++ b/app/views/medications/_new.html.haml
@@ -1,18 +1,23 @@
 - unless current_user.read_only?
   #new-form
-    %a.button.tiny.toggle.right.mt{href: '#new-form'}
+    %a.button.tiny.toggle.right.mt{ href: '#new-form' }
       Add a new medication
 
     .hide
-      %a.button.tiny.close-new-form{href: '#'}
+      %a.button.tiny.close-new-form{ href: '#' }
         Close
 
       %fieldset
         %legend
           Add a new medication
 
-        .row
+        .large-12.columns
+          %ul.error-messages
+            - if pm.object.errors.any?
+              - pm.object.errors.messages.each do |field, msg|
+                %li= msg.join(",")
 
+        .row
           = render partial: 'medications/fields', locals: { pm: pm }
 
 
