Added render template for failing validation, arranged partials to mirror display layout.

--- a/app/views/patients/manage_medications.html.haml
+++ b/app/views/patients/manage_medications.html.haml
@@ -9,12 +9,13 @@
   = form_for @patient do |f|
 
     = hidden_field_tag :redirect_url, manage_medications_patient_path(@patient)
+    = hidden_field_tag :template, "manage_medications"
 
-    = f.fields_for :medications, @patient.active_medications do |pm|
-
-      = render partial: 'medications/new', locals: { pm: pm } if pm.object.new_record?
+    = f.fields_for :medications do |pm|
 
       = render partial: 'medications/medication', locals: { pm: pm } unless pm.object.new_record?
+
+      = render partial: 'medications/new', locals: { pm: pm } if pm.object.new_record?
 
     - unless current_user.read_only?
       = f.submit 'Save Medication', class: 'button tiny right save mt'
